Upgraded and restructured d3/nvd3 sources

--- a/axelor-web/src/main/webapp/css/application.css
+++ b/axelor-web/src/main/webapp/css/application.css
@@ -15,7 +15,7 @@
 @import url('../lib/fullcalendar/fullcalendar.css');
 @import url('../lib/fullcalendar/fullcalendar.print.css') print;
 
-@import url('../lib/nvd3/nv.d3.css');
+@import url('../lib/d3/nv/nv.d3.css');
 
 @import url('scrollbar.css');
 @import url('main.css');
