--- a/axelor-web/src/main/webapp/lib/d3/nv/nv.d3.css
+++ b/axelor-web/src/main/webapp/lib/d3/nv/nv.d3.css
@@ -17,21 +17,22 @@
 
 .nvtooltip {
   position: absolute;
-  background-color: rgba(255,255,255,1);
+  background-color: #fff;
   padding: 1px;
   border: 1px solid rgba(0,0,0,.2);
   z-index: 10000;
 
-  font-family: Arial;
   font-size: 13px;
 
-  transition: opacity 500ms linear;
+  /*transition: opacity 500ms linear;
   -moz-transition: opacity 500ms linear;
   -webkit-transition: opacity 500ms linear;
 
   transition-delay: 500ms;
   -moz-transition-delay: 500ms;
   -webkit-transition-delay: 500ms;
+
+*/
 
   -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
   -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
@@ -61,7 +62,7 @@
   padding: 4px 14px;
   line-height: 18px;
   font-weight: normal;
-  background-color: #f7f7f7;
+  background-color: rgba(247,247,247,0.75);
   text-align: center;
 
   border-bottom: 1px solid #ebebeb;
@@ -69,6 +70,9 @@
   -webkit-border-radius: 5px 5px 0 0;
   -moz-border-radius: 5px 5px 0 0;
   border-radius: 5px 5px 0 0;
+  
+  font-size: 13px;
+  font-weight: bold;
 }
 
 .nvtooltip p {
@@ -175,12 +179,12 @@ svg .title {
 
 .nvd3 .nv-axis line {
   fill: none;
-  stroke: #000;
-  stroke-opacity: .25;
+  stroke: #e5e5e5;
   shape-rendering: crispEdges;
 }
 
-.nvd3 .nv-axis line.zero {
+.nvd3 .nv-axis .zero line,
+/*this selector may not be necessary*/ .nvd3 .nv-axis line.zero {
   stroke-opacity: .75;
 }
 
