--- a/axelor-wkf/src/main/resources/views/Role.xml
+++ b/axelor-wkf/src/main/resources/views/Role.xml
@@ -10,9 +10,9 @@
     <form name="role-form" title="Role" cols="4" model="com.axelor.wkf.db.Role">
         <field name="name" colSpan="2"/>
         <break/>
-        <separator title="Description" colSpan="4"/>
-        <field name="description" showTitle="false" colSpan="4"/>
-		<field name="users" colSpan="4"/>
+        <separator title="Description &amp; Utilisateurs" colSpan="4"/>
+        <field name="description" showTitle="false" colSpan="2"/>
+		<field name="users" colSpan="2" showTitle="false"/>
     </form>
     
 </object-views>
