--- a/axelor-wkf/src/main/resources/views/Workflow.xml
+++ b/axelor-wkf/src/main/resources/views/Workflow.xml
@@ -71,10 +71,10 @@
         <field name="logicOperator" hideIf="type != 'gateway'" />
         <break/>
         <group name="startGroup" colSpan="2" cols="2" hideIf="type == 'start'" >
-	        <field name="startTransitions" colSpan="2" grid-view="start-transition-grid" form-view="start-transition-form"/>
+	        <field name="startTransitions" colSpan="2" grid-view="start-transition-grid" form-view="start-transition-form" showTitle="false"/>
         </group>
         <group name="endGroup" colSpan="2" cols="2" hideIf="type == 'stop'">
-	        <field name="endTransitions" colSpan="2" grid-view="end-transition-grid" form-view="end-transition-form"/>
+	        <field name="endTransitions" colSpan="2" grid-view="end-transition-grid" form-view="end-transition-form" showTitle="false"/>
         </group>
         <separator title="Description" colSpan="4"/>
    		<field name="description" colSpan="4" showTitle="false" widget="CodeEditor[syntax=text]"/>
