--- a/axelor-auth/src/main/resources/views/User.xml
+++ b/axelor-auth/src/main/resources/views/User.xml
@@ -22,6 +22,7 @@
             <field name="activeFrom" validIf="!activeFrom || (activeFrom &amp;&amp; !activeTo) || (activeFrom &amp;&amp; activeTo &amp;&amp; $moment(activeTo) &gt;= $moment(activeFrom))"/>
         	<field name="activeTo" validIf="!activeTo || (!activeFrom &amp;&amp; activeTo) || (activeFrom &amp;&amp; activeTo &amp;&amp; $moment(activeTo) &gt;= $moment(activeFrom))"/>
         </group>
+        <field name="roles" colSpan="2" grid-view="role-grid" form-view="role-form" showTitle="false" />
     </form>
     
     <action-condition name="action-user-validData">
