--- a/axelor-wkf/src/main/resources/views/Instance.xml
+++ b/axelor-wkf/src/main/resources/views/Instance.xml
@@ -11,22 +11,28 @@
         <field name="creationUser"/>
     </grid>
     
-    <form name="instance-form" title="Instances" cols="4" model="com.axelor.wkf.db.Instance">
+    <form name="instance-form" title="Instances" cols="6" model="com.axelor.wkf.db.Instance" onLoad="loadDiagram">
         <field name="workflow"/>
-        <break/>
         <field name="workflow.metaModel.name" title="Meta model"/>
         <field name="metaModelId"/>
-        <field name="nodes" colSpan="4" showTitle="false" />
-        <field name="waitingNodes" colSpan="4" hideIf="!waitingNodes || waitingNodes.length &lt; 1" showTitle="false"/>
-        <field name="executedNodes" colSpan="4" hideIf="!executedNodes || executedNodes.length &lt; 1" showTitle="false"/>
-        <notebook colSpan="4">
-        	<page title="History" cols="4">
-        		<field name="creationDate" />
-        		<field name="creationUser" />
-        		<field name="histories" colSpan="4" grid-view="instance-history-grid" form-view="instance-history-form" showTitle="false"/>
+        <notebook colSpan="6">
+        	<page title="Diagram" cols="4">
+        		<field name="diagram" showTitle="false" readonly="true"  widget="html" colSpan="4" />
         	</page>
-        	<page title="Counter" cols="4">
-        		<field name="counters" colSpan="4" grid-view="instance-counter-grid" form-view="instance-counter-form" showTitle="false"/>
+        	<page title="Details" cols="4">
+		        <field name="nodes" colSpan="4" showTitle="false" />
+		        <field name="waitingNodes" colSpan="4" hideIf="!waitingNodes || waitingNodes.length &lt; 1" showTitle="false"/>
+		        <field name="executedNodes" colSpan="4" hideIf="!executedNodes || executedNodes.length &lt; 1" showTitle="false"/>
+		        <notebook colSpan="4">
+		        	<page title="History" cols="4">
+		        		<field name="creationDate" />
+		        		<field name="creationUser" />
+		        		<field name="histories" colSpan="4" grid-view="instance-history-grid" form-view="instance-history-form" showTitle="false"/>
+		        	</page>
+		        	<page title="Counter" cols="4">
+		        		<field name="counters" colSpan="4" grid-view="instance-counter-grid" form-view="instance-counter-form" showTitle="false"/>
+		        	</page>
+		        </notebook>
         	</page>
         </notebook>
     </form>
@@ -61,5 +67,20 @@
     	<field name="node" />
     	<field name="transitions" colSpan="2" showTitle="false" />
     </form>
+    
+    <!-- ACTION RECORD -->
+    <action-record name="loadDiagram" model="com.axelor.wkf.db.Instance">
+    	<field name="diagram" expr="call: com.axelor.wkf.helper.DiagramHelper:getCenterDiagram(__this__)"/>
+    </action-record>
+    
+    <!-- ACTION VIEW -->
+    <action-view name="action-wkf-my-process" title="Process" model="com.axelor.wkf.db.Instance">
+    	<view type="grid" name="instance-grid"/>
+    	<view type="form" name="instance-form"/>
+    	<domain>self.workflow.metaModel.fullName = :model AND self.metaModelId = :id</domain>
+    	<context name="id" expr="eval: __this__.id" />
+    	<context name="model" expr="eval: _model" />
+		<context name="_showSingle" expr="true" />
+    </action-view>
     
 </object-views>
