--- a/axelor-wkf/src/main/resources/views/Workflow.xml
+++ b/axelor-wkf/src/main/resources/views/Workflow.xml
@@ -6,17 +6,17 @@
 <!-- SELECTS -->
 
     <selection name="node.type.selection">
-		<option value="start">Start</option>
-		<option value="intermediary">Intermediary</option>
-		<option value="stop">Stop</option>
+		<option value="startEvent">Start event</option>
+		<option value="task">Task</option>
+		<option value="endEvent">End event</option>
 		<option value="gateway">Gateway</option>
 	</selection>
     
     <selection name="node.logic.operator.selection">
     	<option value=""></option>
-		<option value="and">AND</option>
-		<option value="or">OR</option>
-		<option value="xor">XOR</option>
+		<option value="parallel">AND</option>
+		<option value="inclusive">OR</option>
+		<option value="exclusive">XOR</option>
 	</selection>
 
 <!-- VIEWS -->
@@ -39,7 +39,7 @@
         <field name="name"/>
         <field name="metaModel"/>
 		<field name="maxNodeCounter"/>
-		<field name="node" />
+		<field name="node" grid-view="start-event-grid" form-view="start-event-form"/>
 	    <field name="sequence" />
 	    <field name="condition" />
         <field name="active" readonlyIf="archived" />
@@ -67,13 +67,60 @@
     <form name="node-form" title="Node" cols="4" model="com.axelor.wkf.db.Node" onNew="node-default-record-group" >
         <field name="type" onChange="node-record-name"/>
         <field name="name"/>
-        <field name="action" hideIf="type != 'intermediary'"/>
-        <field name="logicOperator" hideIf="type != 'gateway'" />
+        <field name="action" hideIf="type != 'task'"/>
+        <field name="operator" hideIf="type != 'gateway'" />
         <break/>
-        <group name="startGroup" colSpan="2" cols="2" hideIf="type == 'start'" >
+        <group name="startGroup" colSpan="2" cols="2" hideIf="type == 'startEvent'" >
 	        <field name="startTransitions" colSpan="2" grid-view="start-transition-grid" form-view="start-transition-form" showTitle="false"/>
         </group>
-        <group name="endGroup" colSpan="2" cols="2" hideIf="type == 'stop'">
+        <group name="endGroup" colSpan="2" cols="2" hideIf="type == 'endEvent'">
+	        <field name="endTransitions" colSpan="2" grid-view="end-transition-grid" form-view="end-transition-form" showTitle="false"/>
+        </group>
+        <separator title="Description" colSpan="4"/>
+   		<field name="description" colSpan="4" showTitle="false" widget="Html"/>
+    </form>
+    
+    <grid name="start-event-grid" title="Start events" model="com.axelor.wkf.db.node.StartEvent">
+        <field name="name"/>
+    </grid>
+    
+    <form name="start-event-form" title="Start event" cols="4" model="com.axelor.wkf.db.node.StartEvent" onNew="start-event-default-record" >
+        <field name="name"/>
+        <break/>
+        <group name="endGroup" colSpan="2" cols="2" >
+	        <field name="endTransitions" colSpan="2" grid-view="end-transition-grid" form-view="end-transition-form" showTitle="false"/>
+        </group>
+        <separator title="Description" colSpan="4"/>
+   		<field name="description" colSpan="4" showTitle="false" widget="Html"/>
+    </form>
+    
+    <grid name="end-event-grid" title="End events" model="com.axelor.wkf.db.node.EndEvent">
+        <field name="name"/>
+    </grid>
+    
+    <form name="end-event-form" title="End event" cols="4" model="com.axelor.wkf.db.node.EndEvent" onNew="end-event-default-record" >
+        <field name="name"/>
+        <break/>
+        <group name="startGroup" colSpan="2" cols="2" >
+	        <field name="startTransitions" colSpan="2" grid-view="start-transition-grid" form-view="start-transition-form" showTitle="false"/>
+        </group>
+        <separator title="Description" colSpan="4"/>
+   		<field name="description" colSpan="4" showTitle="false" widget="Html"/>
+    </form>
+    
+    <grid name="task-grid" title="Tasks" model="com.axelor.wkf.db.node.Task">
+        <field name="name"/>
+        <field name="action"/>
+    </grid>
+    
+    <form name="task-form" title="Task" cols="4" model="com.axelor.wkf.db.node.Task" onNew="task-default-record" >
+        <field name="name"/>
+        <field name="action"/>
+        <break/>
+        <group name="startGroup" colSpan="2" cols="2" >
+	        <field name="startTransitions" colSpan="2" grid-view="start-transition-grid" form-view="start-transition-form" showTitle="false"/>
+        </group>
+        <group name="endGroup" colSpan="2" cols="2" >
 	        <field name="endTransitions" colSpan="2" grid-view="end-transition-grid" form-view="end-transition-form" showTitle="false"/>
         </group>
         <separator title="Description" colSpan="4"/>
@@ -164,14 +211,19 @@
     	<field name="active" expr="eval: !archived"/>
     </action-record>
     
-    <action-record name="node-start-default-record" model="com.axelor.wkf.db.Node">
-    	<field name="type" expr="start"/>
-    	<field name="name" expr="Start :"/>
+    <action-record name="start-event-default-record" model="com.axelor.wkf.db.node.StartEvent">
+    	<field name="type" expr="startEvent"/>
+    	<field name="name" expr="Start event :"/>
     </action-record>
     
-    <action-record name="node-default-record" model="com.axelor.wkf.db.Node">
-    	<field name="type" expr="intermediary"/>
-    	<field name="name" expr="eval: 'INTERMEDIARY:'"/>
+    <action-record name="end-event-default-record" model="com.axelor.wkf.db.node.EndEvent">
+    	<field name="type" expr="endEvent"/>
+    	<field name="name" expr="End event :"/>
+    </action-record>
+    
+    <action-record name="task-default-record" model="com.axelor.wkf.db.node.Task">
+    	<field name="type" expr="task"/>
+    	<field name="name" expr="eval: 'Task:'"/>
     </action-record>
     
     <action-record name="node-record-name" model="com.axelor.wkf.db.Node">
@@ -193,8 +245,8 @@
 	
 	<!-- GROUP -->
 	<action-group name="node-default-record-group">
-		<action name="node-start-default-record" if="_parent?._model == 'com.axelor.wkf.db.Workflow'"/>
-		<action name="node-default-record" if="_parent?._model != 'com.axelor.wkf.db.Workflow'"/>
+		<action name="start-event-default-record" if="_parent?._model == 'com.axelor.wkf.db.Workflow'"/>
+		<action name="task-default-record" if="_parent?._model != 'com.axelor.wkf.db.Workflow'"/>
 	</action-group>
     
 </object-views>
